<!--
  ~ Project: Forest violations
  ~ Purpose: Mobile application for registering facts of the forest violations.
  ~ Author:  Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
  ~ ******************************************************************************
  ~ Copyright (c) 2015-2015. NextGIS, info@nextgis.com
  ~
  ~ This is free and unencumbered software released into the public domain.
  ~ 
  ~ Anyone is free to copy, modify, publish, use, compile, sell, or
  ~ distribute this software, either in source code form or as a compiled
  ~ binary, for any purpose, commercial or non-commercial, and by any
  ~ means.
  ~ 
  ~ In jurisdictions that recognize copyright laws, the author or authors
  ~ of this software dedicate any and all copyright interest in the
  ~ software to the public domain. We make this dedication for the benefit
  ~ of the public at large and to the detriment of our heirs and
  ~ successors. We intend this dedication to be an overt act of
  ~ relinquishment in perpetuity of all present and future rights to this
  ~ software under copyright law.
  ~ 
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~ EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
  ~ MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
  ~ IN NO EVENT SHALL THE AUTHORS BE LIABLE FOR ANY CLAIM, DAMAGES OR
  ~ OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
  ~ ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
  ~ OTHER DEALINGS IN THE SOFTWARE.
  ~ 
  ~ For more information, please refer to <http://unlicense.org>
  -->

<resources>
    <string name="app_name">Safe forest</string>
    <string name="account_name">Safe forest</string>
    <string name="title_notes">Notifications</string>
    <string name="title_map">Map</string>
    <string name="action_settings">Settings</string>
    <string name="app_description">The application for see the forest violations notifications, notify about new forest violations and check theirs status.</string>
    <string name="credits_intro">Credits:</string>
    <string name="credits"><![CDATA[Some icons used in the application are from <a href=\"http://romannurik.github.io/AndroidAssetStudio/icons-launcher.html\">romannurik.github.io</a>, licensed under a <a href=\"http://creativecommons.org/licenses/by/3.0/\">CC BY 3.0 license</a>]]></string>
    <string name="copyright"><![CDATA[Copyright © <a href=\"http://nextgis.com\">NextGIS</a>, 2015]]></string>
    <string name="action_about">About</string>
    <string name="topo">Topo</string>
    <string name="contact">Contact</string>
    <string name="name">Name</string>
    <string name="felling">Felling</string>
    <string name="fire">Fire</string>
    <string name="geomixer_fv_tiles">GeoMixer violation tiles</string>
    <string name="sf_login_title">Account</string>
    <string name="sf_login_description"><![CDATA[Enter your information for account registration on server (registration can be skipped, but the application will have limited functionality). In addition, select the area of work (obligatory input field). As username you must use a valid email address. After clicking on the \ "Register \" or \ "Skip \" will start the process of getting data to work offline. This process need a lot of traffic, so Wi-Fi connection recommended.]]></string>
    <string name="first_run">First run</string>
    <string name="fi_url">Server URL</string>
    <string name="error_init">Failed to initialize</string>
    <string name="initialization">Initial setup</string>
    <string name="create_base_layers">Create base layers</string>
    <string name="check_server">Check server</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="KHA">KHabarovskij kraj</string>
    <string name="PRI">Primorskij kraj</string>
    <string name="sf_region_select">Select working territory (obligatory)</string>
    <string name="connecting">Connecting to server…</string>
    <string name="connected">Connected</string>
    <string name="check_tables_exist">Check tables exist</string>
    <string name="error_wrong_server">The incompatible server</string>
    <string name="done">Done</string>
    <string name="working">Working…</string>
    <string name="user_email_login">Login (email address)</string>
    <string name="phone">Phone number</string>
    <string name="password">Password to message server</string>
    <string name="downloaded">downloaded</string>
    <string name="error_unexpected">Unexpected error occurred</string>
    <string name="of">of</string>
    <string name="show_status_panel">Status info panel</string>
    <string name="show_status_panel_summary">Show current status info at bottom panel</string>
    <string name="show_current_location">Show current location</string>
    <string name="coordinates_format">Coordinates format</string>
    <string name="select_coordinates_format">Select coordinates format</string>
    <string name="coordinates_format_summary">Coordinate text format</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="keep_screen_on_summary">Do not turn off screen</string>
    <string name="show_zoom_controls">Show zoom controls</string>
    <string name="show_zoom_controls_summary">Show zoom in/zoom out control on the map</string>
    <string name="general">General</string>
    <string name="click_to_change_account">Change account settings</string>
    <string name="theme">Application theme</string>
    <string name="sync_switch">Switch sync on/off</string>
    <string name="get_citizen_messages">Get messages</string>
</resources>
