<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Project: Forest violations
  ~ Purpose: Mobile application for registering facts of the forest violations.
  ~ Author:  Dmitry Baryshnikov (aka Bishop), bishop.dev@gmail.com
  ~ ******************************************************************************
  ~ Copyright (c) 2015-2015. NextGIS, info@nextgis.com
  ~
  ~ This is free and unencumbered software released into the public domain.
  ~ 
  ~ Anyone is free to copy, modify, publish, use, compile, sell, or
  ~ distribute this software, either in source code form or as a compiled
  ~ binary, for any purpose, commercial or non-commercial, and by any
  ~ means.
  ~ 
  ~ In jurisdictions that recognize copyright laws, the author or authors
  ~ of this software dedicate any and all copyright interest in the
  ~ software to the public domain. We make this dedication for the benefit
  ~ of the public at large and to the detriment of our heirs and
  ~ successors. We intend this dedication to be an overt act of
  ~ relinquishment in perpetuity of all present and future rights to this
  ~ software under copyright law.
  ~ 
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~ EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
  ~ MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
  ~ IN NO EVENT SHALL THE AUTHORS BE LIABLE FOR ANY CLAIM, DAMAGES OR
  ~ OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
  ~ ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
  ~ OTHER DEALINGS IN THE SOFTWARE.
  ~ 
  ~ For more information, please refer to <http://unlicense.org>
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/general"
        android:key="general">
        <ListPreference
            android:title="@string/theme"
            android:key="theme"
            android:defaultValue="light"
            android:entries="@array/theme"
            android:entryValues="@array/theme_val"/>
        <CheckBoxPreference
            android:title="@string/sync_switch"
            android:key="sync_periodically"
            android:defaultValue="true"/>
        <ListPreference
            android:title="@string/sync_interval"
            android:key="sync_period"
            android:defaultValue="3600"
            android:entries="@array/sync_periods"
            android:entryValues="@array/sync_periods_val"/>
        <Preference
            android:title="@string/click_to_change_account"
            android:key="change_account"/>

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/title_map"
        android:key="map">
        <CheckBoxPreference
            android:key="show_status_panel"
            android:title="@string/show_status_panel"
            android:defaultValue="false"
            android:summary="@string/show_status_panel_summary"
            />
        <ListPreference
            android:key="show_current_location"
            android:title="@string/show_current_location"
            android:defaultValue="3"
            android:entries="@array/current_location_mode"
            android:entryValues="@array/current_location_mode_val"
            />
        <CheckBoxPreference
            android:key="keep_screen_on"
            android:title="@string/keep_screen_on"
            android:defaultValue="false"
            android:summary="@string/keep_screen_on_summary"
            />
        <CheckBoxPreference
            android:key="show_zoom_controls"
            android:title="@string/show_zoom_controls"
            android:defaultValue="false"
            android:summary="@string/show_zoom_controls_summary"
            />
        <ListPreference
            android:key="coordinates_format"
            android:title="@string/coordinates_format"
            android:summary="@string/coordinates_format_summary"
            android:defaultValue="0"
            android:entries="@array/coordinates_format"
            android:entryValues="@array/coordinates_format_val"
            android:dialogTitle="@string/select_coordinates_format"
            />
    </PreferenceCategory>

</PreferenceScreen>
